AC_INIT([nextweb], [0.3.4], [highpower@mail.ru])
AM_INIT_AUTOMAKE(1.9)

AC_GNU_SOURCE
AC_CONFIG_HEADERS(config/config.h)

AC_PROG_CXX
AC_PROG_CPP
AC_PROG_CXXCPP
AC_PROG_LIBTOOL
AC_LANG([C++])

AM_MAINTAINER_MODE

AX_PREFIX_CONFIG_H(config/acsetup.hpp)
for i in -W -Wall -Wextra -fexceptions -frtti -ftemplate-depth-128; do
	AX_CHECK_COMPILER_FLAGS([$i], [CXXFLAGS="$CXXFLAGS $i"], [])
done

AM_PATH_PYTHON
AX_PYTHON_DEVEL

AX_CHECK_FASTCGI([], [
	AC_MSG_ERROR([libfcgi is not found])
])

AX_CHECK_CPPUNIT([1.10.0], [], [
	AC_MSG_WARN([cppunit not found. compilation of tests disabled])
])

AC_CONFIG_FILES([fastcgi/Makefile include/Makefile \
	include/nextweb/Makefile Makefile python/fastcgi/Makefile 
	python/Makefile python/regions/Makefile python/templates/Makefile \
	regions/Makefile templates/Makefile tests/fastcgi/Makefile \
	tests/Makefile tests/regions/Makefile tests/templates/Makefile \
	tests/utils/Makefile utils/Makefile])

AC_OUTPUT
