lib_LTLIBRARIES = libnextweb-regions.la

libnextweb_regions_la_SOURCES = Regions.cpp
libnextweb_regions_la_LDFLAGS = 
libnextweb_regions_la_LIBADD = ../library/libnextweb.la

AM_CXXFLAGS = -pthread
AM_CPPFLAGS = -I../config -I../include

noinst_HEADERS = RegionsImpl.hpp
pkginclude_HEADERS = Regions.hpp