lib_LTLIBRARIES = libnextweb.la

libnextweb_la_LDFLAGS = 
libnextweb_la_SOURCES = \
	CharBuffer.cpp \
	CharTraits.cpp \
	Error.cpp \
	Functors.cpp \
	MappedFile.cpp \
	PosixThreads.cpp \
	Range.cpp \
	ScopedLock.cpp \
	Shared.cpp \
	StringConverters.cpp \
	SystemError.cpp \
	Threads.cpp \
	TypeTraits.cpp \
	VarUtils.cpp

AM_CXXFLAGS = -pthread
AM_CPPFLAGS = -I${top_srcdir}/include -I${top_srcdir}/config
AM_LDFLAGS = 
