noinst_HEADERS = AcceptTask.hpp CharTraits.hpp Condition.hpp \
	EnumerationImpl.hpp EnvironIterator.hpp Environment.hpp Functors.hpp \
	HttpConstants.hpp LockableRefCount.hpp MapUtils.hpp MetaPrograms.hpp \
	MmapImpl.hpp MmapIterator.hpp MultiThreaded.hpp Mutex.hpp Queue.hpp \
	Range.hpp ReadableFile.hpp RequestImpl.hpp RequestParams.hpp Resource.hpp \
	ScopedLock.hpp ServerImpl.hpp SingleThreaded.hpp StringConverters.hpp \
	StringPred.hpp StringSplit.hpp StringUtils.hpp SystemError.hpp \
	ThreadGroup.hpp Thread.hpp ThreadPerConnect.hpp ThreadPool.hpp \
	UpperLower.hpp UrlEncode.hpp WriteableFile.hpp
