nobase_pkginclude_HEADERS = \
	Config.hpp \
	Enumeration.hpp \
	Error.hpp \
	Shared.hpp \
	SharedPtr.hpp \
	fastcgi/Cookie.hpp \
	fastcgi/File.hpp \
	fastcgi/Forward.hpp \
	fastcgi/HttpDate.hpp \
	fastcgi/HttpError.hpp \
	fastcgi/HttpStatus.hpp \
	fastcgi/impl/Buffer.hpp \
	fastcgi/impl/FastCgiIO.hpp \
	fastcgi/impl/FileImpl.hpp \
	fastcgi/impl/GenericRequest.hpp \
	fastcgi/impl/GenericResponse.hpp \
	fastcgi/impl/HttpUtils.hpp \
	fastcgi/impl/IterFileImpl.hpp \
	fastcgi/impl/LineEndFilter.hpp \
	fastcgi/impl/PostParser.hpp \
	fastcgi/impl/RequestImpl.hpp \
	fastcgi/impl/ResponseImpl.hpp \
	fastcgi/impl/ServerImpl.hpp \
	fastcgi/impl/SocketPolicy.hpp \
	fastcgi/impl/StreamBuffer.hpp \
	fastcgi/impl/UrlEncode.hpp \
	fastcgi/impl/UrlMatch.hpp \
	fastcgi/Logger.hpp \
	fastcgi/RequestHandler.hpp \
	fastcgi/Request.hpp \
	fastcgi/Response.hpp \
	fastcgi/Server.hpp \
	fastcgi/Settings.hpp \
	inlines/Error.hpp \
	inlines/fastcgi/File.hpp \
	inlines/fastcgi/GenericResponse.hpp \
	inlines/fastcgi/HttpDate.hpp \
	inlines/fastcgi/HttpStatus.hpp \
	inlines/fastcgi/IterFileImpl.hpp \
	inlines/Shared.hpp \
	inlines/utils/CharTraits.hpp \
	inlines/utils/Functors.hpp \
	inlines/utils/MappedFile.hpp \
	inlines/utils/Range.hpp \
	inlines/utils/ScopedLock.hpp \
	inlines/utils/StringConverters.hpp \
	inlines/utils/Threads.hpp \
	templates/impl/TemplateImpl.hpp \
	templates/ParamSet.hpp \
	templates/Template.hpp \
	utils/CharTraits.hpp \
	utils/EnumerationImpl.hpp \
	utils/Functors.hpp \
	utils/Integer.hpp \
	utils/Iterator.hpp \
	utils/Macros.hpp \
	utils/MappedFile.hpp \
	utils/MultiThreaded.hpp \
	utils/PosixThreads.hpp \
	utils/Range.hpp \
	utils/Resource.hpp \
	utils/ReturnType.hpp \
	utils/ScopedLock.hpp \
	utils/SingleThreaded.hpp \
	utils/SplitKeyValue.hpp \
	utils/StaticAssert.hpp \
	utils/StringConverters.hpp \
	utils/StringUtils.hpp \
	utils/SystemError.hpp \
	utils/ThreadQueue.hpp \
	utils/Threads.hpp \
	utils/Tokenizer.hpp \
	utils/Tuple.hpp \
	utils/TypeList.hpp \
	utils/TypeTraits.hpp \
	utils/VarUtils.hpp
